feature(batch action) add batch acion start domain command and handler (#905)

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -3,3 +3,7 @@ services:
         autowire: false
         autoconfigure: false
         public: false
+
+    Ergonode\BatchAction\Infrastructure\JMS\Serializer\Handler\:
+        resource: '../../Infrastructure/JMS/Serializer/Handler/*'
+        tags: ['jms_serializer.subscribing_handler']
