--- a/src/Resources/config/messenger.yaml
+++ b/src/Resources/config/messenger.yaml
@@ -1,5 +1,6 @@
 framework:
     messenger:
         routing:
-            Ergonode\BatchAction\Domain\Command\CreateBatchActionCommand: '%ergonode.batch_action.messenger_transport_name%'
+            Ergonode\BatchAction\Domain\Command\StartBatchActionCommand: '%ergonode.batch_action.messenger_transport_name%'
             Ergonode\BatchAction\Domain\Command\ProcessBatchActionEntryCommand: '%ergonode.batch_action.messenger_transport_name%'
+
