--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -27,22 +27,13 @@ services:
     Ergonode\BatchAction\Application\Controller\Api\GetResourcesCountAction:
         tags: [ 'controller.service_arguments' ]
         arguments:
+            $formFactory: '@form.factory'
             $factory: '@Ergonode\BatchAction\Application\Controller\Api\Factory\BatchActionFilterFactory'
-            $countFilter: '@Ergonode\BatchAction\Infrastructure\Filter\CountFilter'
-            $normalizer: '@Ergonode\SharedKernel\Application\Serializer\NormalizerInterface'
-            $validator: '@Symfony\Component\Validator\Validator\ValidatorInterface'
-
-    Ergonode\BatchAction\Application\Controller\Api\GetTemplatesByBatchAction:
-        tags: [ 'controller.service_arguments' ]
-        arguments:
-            - '@Ergonode\BatchAction\Application\Controller\Api\Factory\BatchActionFilterFactory'
-            - '@Ergonode\BatchAction\Infrastructure\Filter\TemplateBatchActionFilter'
-            - '@Ergonode\SharedKernel\Application\Serializer\NormalizerInterface'
-            - '@Symfony\Component\Validator\Validator\ValidatorInterface'
+            $count: '@Ergonode\BatchAction\Domain\Count\CountInterface'
 
     Ergonode\BatchAction\Application\Provider\BatchActionFormProvider:
         arguments:
-            $forms: !tagged_iterator 'batch_action.form_provider.interface'
+            $forms: !tagged_iterator 'ergonode.batch_action.form_provider'
 
     Ergonode\BatchAction\Application\Controller\Api\GetBatchAction:
         tags: ['controller.service_arguments']
@@ -85,23 +76,19 @@ services:
         arguments:
             - '@doctrine.dbal.default_connection'
 
-    Ergonode\BatchAction\Infrastructure\Filter\CountFilter:
-        $filteredQueryBuilder: '@Ergonode\BatchAction\Infrastructure\Provider\FilteredQueryBuilderInterface'
-        $connection: '@doctrine.dbal.default_connection'
-
-    Ergonode\BatchAction\Infrastructure\Filter\TemplateBatchActionFilter:
-        arguments:
-            - '@Ergonode\BatchAction\Infrastructure\Provider\FilteredQueryBuilderInterface'
-            - '@doctrine.dbal.default_connection'
-
     Ergonode\BatchAction\Domain\Query\BatchActionQueryInterface: '@Ergonode\BatchAction\Infrastructure\Persistence\Query\DbalBatchActionQuery'
     Ergonode\BatchAction\Domain\Query\BatchActionEntryGridQueryInterface: '@Ergonode\BatchAction\Infrastructure\Persistence\Query\DbalBatchActionEntryGridQuery'
 
     Ergonode\BatchAction\Infrastructure\Provider\BatchActionFilterIdsInterface: '@Ergonode\Product\Infrastructure\Filter\BatchAction\ProductBatchActionFilter'
 
-    Ergonode\BatchAction\Domain\Repository\BatchActionRepositoryInterface: '@Ergonode\BatchAction\Infrastructure\Persistence\Repository\DbalBatchActionRepository'
+    Ergonode\BatchAction\Domain\Count\Count:
+        arguments:
+            $counts: !tagged_iterator 'ergonode.batch_action.count'
+        autoconfigure: false
 
-    Ergonode\BatchAction\Infrastructure\Provider\FilteredQueryBuilderInterface: '@Ergonode\Product\Infrastructure\Provider\FilteredQueryBuilder'
+    Ergonode\BatchAction\Domain\Count\CountInterface: '@Ergonode\BatchAction\Domain\Count\Count'
+
+    Ergonode\BatchAction\Domain\Repository\BatchActionRepositoryInterface: '@Ergonode\BatchAction\Infrastructure\Persistence\Repository\DbalBatchActionRepository'
 
     Ergonode\BatchAction\Infrastructure\Handler\CreateBatchActionCommandHandler:
         tags: ['messenger.message_handler']
