feature(core) Add application events (#1310)

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -121,7 +121,7 @@ services:
     Ergonode\BatchAction\Infrastructure\Handler\EndBatchActionCommandHandler:
         tags: [ 'messenger.message_handler' ]
         arguments:
-            - '@Ergonode\SharedKernel\Domain\Bus\EventBusInterface'
+            - '@Ergonode\SharedKernel\Domain\Bus\DomainEventBusInterface'
 
     Ergonode\BatchAction\Infrastructure\Handler\BatchActionEndedEventHandler:
         tags: [ 'messenger.message_handler' ]
