--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "ergonode/grid": "^1.0.0-rc.1",
         "ergonode/es": "^1.0.0-rc.1",
         "ergonode/migration": "^1.0.0-rc.1",
-        "ergonode/shared-kernel": "^1.0.0-rc.1",
-        "jms/serializer": "^3.4"
+        "ergonode/shared-kernel": "^1.0.0-rc.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
