--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     "require": {
         "php": "^7.4",
         "doctrine/dbal": "^2.10",
-        "ergonode/api": "^1.0.0-rc.2",
-        "ergonode/account": "^1.0.0-rc.2",
-        "ergonode/notification": "^1.0.0-rc.2",
-        "ergonode/core": "^1.0.0-rc.2",
-        "ergonode/grid": "^1.0.0-rc.2",
-        "ergonode/es": "^1.0.0-rc.2",
-        "ergonode/migration": "^1.0.0-rc.2",
-        "ergonode/shared-kernel": "^1.0.0-rc.2"
+        "ergonode/api": "^1.0.0",
+        "ergonode/account": "^1.0.0",
+        "ergonode/notification": "^1.0.0",
+        "ergonode/core": "^1.0.0",
+        "ergonode/grid": "^1.0.0",
+        "ergonode/es": "^1.0.0",
+        "ergonode/migration": "^1.0.0",
+        "ergonode/shared-kernel": "^1.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
