--- a/src/Resources/config/messenger.yaml
+++ b/src/Resources/config/messenger.yaml
@@ -1,5 +1,6 @@
 framework:
     messenger:
+        transports:
+            batch-action: "batch-action://"
         routing:
-            Ergonode\BatchAction\Domain\Command\StartBatchActionCommand: '%ergonode.batch_action.messenger_transport_name%'
-            Ergonode\BatchAction\Domain\Command\ProcessBatchActionEntryCommand: '%ergonode.batch_action.messenger_transport_name%'
+            Ergonode\BatchAction\Domain\Command\ProcessBatchActionEntryCommand: 'batch-action'
