docs: Fixed invalid OpenApi bool type (#1658)

--- a/src/Resources/config/nelmio_api_doc.yaml
+++ b/src/Resources/config/nelmio_api_doc.yaml
@@ -25,7 +25,7 @@ nelmio_api_doc:
                                         items:
                                             type: string
                                     included:
-                                        type: bool
+                                        type: boolean
                                         required: true
                             query:
                                 type: string
